# tpDcc-dccs-max

./: .buildinfo  .travis.yml  MANIFEST.in  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tpDcc.dccs.html  tpDcc.dccs.max.core.dcc.html  tpDcc.dccs.max.core.directory.html  tpDcc.dccs.max.core.gui.html  tpDcc.dccs.max.core.helpers.html  tpDcc.dccs.max.core.html  tpDcc.dccs.max.core.scene.html  tpDcc.dccs.max.core.viewport.html  tpDcc.dccs.max.html  tpDcc.dccs.max.loader.html  tpDcc.dccs.max.register.html  tpDcc.dccs.max.ui.dialog.html  tpDcc.dccs.max.ui.html  tpDcc.dccs.max.ui.window.html  tpDcc.html
_sources/: tpDcc.dccs.max.core.dcc.rst.txt  tpDcc.dccs.max.core.directory.rst.txt  tpDcc.dccs.max.core.gui.rst.txt  tpDcc.dccs.max.core.helpers.rst.txt  tpDcc.dccs.max.core.rst.txt  tpDcc.dccs.max.core.scene.rst.txt  tpDcc.dccs.max.core.viewport.rst.txt  tpDcc.dccs.max.loader.rst.txt  tpDcc.dccs.max.register.rst.txt  tpDcc.dccs.max.rst.txt  tpDcc.dccs.max.ui.dialog.rst.txt  tpDcc.dccs.max.ui.rst.txt  tpDcc.dccs.max.ui.window.rst.txt  tpDcc.dccs.rst.txt
source/tpMaxLib/: __init__.py
source/tpMaxLib/core/: dcc.py  directory.py  gui.py  helpers.py  scene.py
tests/: test_general.py
tpDcc/dccs/max/: __logging__.ini  __version__.py  _version.py  loader.py  register.py
tpDcc/dccs/max/core/: dcc.py  gui.py  helpers.py  scene.py
tpDcc/dccs/max/ui/: __init__.py  dialog.py  window.py
