[metadata]
name = tpDcc-dccs-max
description = 3ds Max implementation for tpDcc. Utils functions to work with 3ds Max Python APIs.
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpDcc.dccs.max.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-dccs-max

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    euclid
    tpDcc-core
    tpDcc-libs-python
    tpDcc-libs-qt

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1